--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,34 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<dependencyManagement>
+		<dependencies>
+			<!--<dependency>-->
+				<!--<groupId>com.sun.jersey</groupId>-->
+				<!--<artifactId>jersey-client</artifactId>-->
+				<!--<version>2.25.1</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.glassfish.jersey.media</groupId>-->
+				<!--<artifactId>jersey-media-json-jackson</artifactId>-->
+				<!--<version>2.25.1</version>-->
+			<!--</dependency>-->
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-client</artifactId>
+				<version>3.1.4.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.resteasy</groupId>
+				<artifactId>resteasy-jackson-provider</artifactId>
+				<version>3.1.4.Final</version>
+			</dependency>
+
+
+
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -50,17 +78,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
