Add Binance Exchange

--- a/connectors/cryptopia/pom.xml
+++ b/connectors/cryptopia/pom.xml
@@ -67,11 +67,11 @@
 			<artifactId>commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>com.connectors</groupId>
-			<artifactId>connectors</artifactId>
-			<version>1.5.9.RELEASE</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.connectors</groupId>-->
+			<!--<artifactId>connectors</artifactId>-->
+			<!--<version>1.5.9.RELEASE</version>-->
+		<!--</dependency>-->
 
 
 	</dependencies>
