--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,9 +12,9 @@
 	<description>Core Module</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		<groupId>com.cryptobot</groupId>
+		<artifactId>cryptobot</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -47,6 +47,19 @@
 			<artifactId>cryptopia</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.binancex</groupId>
+			<artifactId>binancex</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.connectors</groupId>
+			<artifactId>connectors</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>com.commons</groupId>
 			<artifactId>commons</artifactId>
@@ -93,13 +106,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>com.connectors</groupId>
-			<artifactId>connectors</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
