--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,6 @@
 				<artifactId>resteasy-jackson-provider</artifactId>
 				<version>3.1.4.Final</version>
 			</dependency>
-
-
-
 		</dependencies>
 	</dependencyManagement>
 
@@ -89,6 +86,21 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.cryptopia</groupId>-->
+			<!--<artifactId>cryptopia</artifactId>-->
+			<!--<version>0.0.1-SNAPSHOT</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>com.binancex</groupId>-->
+			<!--<artifactId>binancex</artifactId>-->
+			<!--<version>0.0.1-SNAPSHOT</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>com.connectors</groupId>-->
+			<!--<artifactId>connectors</artifactId>-->
+			<!--<version>0.0.1-SNAPSHOT</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
