--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -63,6 +63,12 @@
 			<version>3.1.4.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+
         </dependencies>
 
         <build>
