--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -69,7 +69,18 @@
 			<version>1.9.1</version>
 		</dependency>
 
-        </dependencies>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+		</dependency>
+
+
+	</dependencies>
 
         <build>
             <plugins>
