--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 core.limit.minpercent=0.04
 core.config.telegram.chatid=-307972550
+core.compare.delay=60000
+compare.remove.oportunities.delay=180000
